# sdl_template

./: .gitignore  meson.build  readme.md
src/: app.c  app.h  main.c  meson.build
tests/: meson.build  test.c
